[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
async-trait = "0.1.68"
chrono = "0.4.24"
claim = "0.5.0"
config = "0.13.3"
# env_logger = { version = "0.10.0", default-features = false }
log = "0.4.17"
mimalloc = "0.1.39"
once_cell = "1.18.0"
reqwest = "0.11.16"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
serde-aux = "4.3.1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.37", default-features = false, features = ["log", "attributes"] }
tracing-actix-web = "0.7.9"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["registry", "env-filter"] }
unicode-segmentation = "1.10.1"
urlencoding = "2.1.2"
uuid = { version = "1.3.3", features = ["v4"] }

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "json",
    "migrate"
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
test-case = "3.1.0"
